Fix <i> tags to align icons in the center using justify-content:center
Thanks @agrochal

--- a/css/main.css
+++ b/css/main.css
@@ -292,7 +292,10 @@ strong {
   color: #FFF;
   font-size: 2em;
   min-width: 1.5em;
-  padding-left: 0.3em;
+  min-height: 1.5em;
+  display:flex;
+  justify-content: center;
+  align-items:center;
 }
 
 .mb-medium {
